<resources>
    <string name="app_name">Schedulr</string>

    <!-- AddClassActivity-->
    <string name="add_class_toolbar_title">New class</string>
    <string name="add_class_name_hint">Class name</string>
    <string name="add_class_subject_hint">Subject</string>
    <string name="add_class_number_hint">Class number</string>
    <string name="add_class_teacher_hint">Teacher</string>
    <!--menu_edit_class-->
    <string name="menu_edit_class_delete">Delete</string>

    <!--fragment_add_assignment-->
    <string name="assignment_name_hint">Name</string>
    <string name="assignment_description_hint">Description</string>
    <string name="assignment_due_date">Due Date?</string>
    <string name="assignment_priority">Priority?</string>
    <string name="assignment_class">Class?</string>
    <array name="add_priority_spinner">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </array>
</resources>
