<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:fitsSystemWindows="true">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_class_activity_coordinator_layout">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/add_class_activity_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">
                </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        style="@style/TextInputLayout">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/add_class_activity_class_name_edit_text"
                            android:hint="@string/add_class_name_hint"
                            style="@style/TextInputEditLayout"/>
                    </android.support.design.widget.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/edit_text_input_margin"
                        android:layout_marginLeft="@dimen/edit_text_input_margin"
                        android:layout_marginRight="@dimen/edit_text_input_margin"
                        android:gravity="center_vertical"
                        android:weightSum="100">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginStart="4dp"
                            android:layout_weight="50">
                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/add_class_activity_subject_edit_text"
                                android:hint="@string/add_class_subject_hint"
                                android:inputType="textCapCharacters"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="50">
                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/add_class_activity_class_num_edit_text"
                                android:hint="@string/add_class_number_hint"
                                android:inputType="number"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <android.support.design.widget.TextInputLayout
                        style="@style/TextInputLayout">
                        <android.support.design.widget.TextInputEditText
                            style="@style/TextInputEditLayout"
                            android:id="@+id/add_class_activity_teacher_edit_text"
                            android:hint="@string/add_class_teacher_hint"/>
                    </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/edit_text_input_margin"
                    android:layout_marginLeft="@dimen/edit_text_input_margin"
                    android:layout_marginRight="@dimen/edit_text_input_margin"
                    android:gravity="center_vertical"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Color"
                        android:textSize="17sp"
                        android:padding="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="80"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:background="@color/colorAccent"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_class_activity_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/fab_labels_margin"
            android:layout_marginRight="@dimen/fab_labels_margin"
            android:src="@drawable/ic_action_checkmark"/>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>