<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/fragment_add_assignment_coordinator">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/fragment_add_assignment_app_bar"
            android:layout_width="match_parent"
            android:layout_height="75dp">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/fragment_add_assignment_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">
                </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_add_assignment_description_edit_text"
                        android:hint="@string/assignment_description_hint"
                        android:layout_marginTop="@dimen/edit_text_input_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_text_input_margin"
                        android:layout_marginRight="@dimen/edit_text_input_margin"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    style="@style/AddFragmentAssignmentLinearLayout">
                    <ImageView
                        android:src="@drawable/ic_calendar_black_24dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:text="@string/assignment_due_date"
                        android:textSize="15sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        />
                    <Button
                        android:id="@+id/fragment_add_assignment_due_date_button"
                        android:gravity="center_vertical"
                        android:text="DATE_HERE"
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_text_input_margin"
                        android:layout_marginRight="@dimen/edit_text_input_margin"
                        style="?android:attr/borderlessButtonStyle"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/AddFragmentAssignmentLinearLayout">
                    <ImageView
                        android:src="@drawable/ic_collections_bookmark_black_24dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:text="@string/assignment_class"
                        android:textSize="15sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:layout_gravity="center_vertical"
                        />
                    <Spinner
                        android:id="@+id/fragment_add_assignment_class_spinner"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:foregroundGravity="center"
                        android:layout_marginLeft="@dimen/edit_text_input_margin"
                        android:layout_marginRight="@dimen/edit_text_input_margin" />
                </LinearLayout>
                <LinearLayout
                    style="@style/AddFragmentAssignmentLinearLayout">
                    <ImageView
                        android:src="@drawable/ic_priority_icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:text="@string/assignment_priority"
                        android:textSize="15sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:layout_gravity="center_vertical"
                        />
                    <Spinner
                        android:id="@+id/fragment_add_assignment_priority_spinner"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:foregroundGravity="center"
                        android:layout_marginLeft="@dimen/edit_text_input_margin"
                        android:layout_marginRight="@dimen/edit_text_input_margin" />
                </LinearLayout>
            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_add_assignment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_labels_margin"
        android:src="@drawable/ic_action_checkmark"/>
</android.support.design.widget.CoordinatorLayout>